--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -963,11 +963,16 @@ section.hub_column_main {
 
 section.post_column_main {
     @media print {
-        margin: 0px;
+        @include compact;
+        margin-top: 20px;
     }
     // Applied to p, pre, ul, ol
     @mixin bottom_margin {
         margin: 0 0 12px 0;
+    }
+
+    div.meta {
+        margin-bottom: 15px;
     }
     
     div.image_container {
@@ -1081,9 +1086,6 @@ section.post_column_main {
         &.category + h2 {
             margin-top: 0px;
             padding-top: 0px;
-        }
-        &.category {
-            padding-bottom: 15px;
         }
 
         &.excerpt,
