Fix condition in no related post checking

--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -49,7 +49,7 @@
 
         {% endfor %}
 
-        {% if postCount == '0' %}
+        {% if postCount == 0 %}
             <div class="related_post">
                 <div class="related_post_heading">
                     <h2>No related posts</h2>
@@ -58,4 +58,3 @@
         {% endif %}
     </div>
 </div>
-    
