Do not wrap long tags at end of row

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1365,6 +1365,7 @@ section.post_column_main {
                     padding: 2px 8px 4px 8px;
                     border-radius: 2px;
                     margin-right: 5px;
+                    display: inline-block;
                 }
             }
         }
