Smaller tag padding

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1362,9 +1362,9 @@ section.post_column_main {
                     line-height: $font_size_default + 10;
                     color: $color_tag_text;
                     background: $color_tag_bg;
-                    padding: 2px 8px 4px 8px;
+                    padding: 0px 8px 2px 8px;
                     border-radius: 2px;
-                    margin-right: 5px;
+                    margin: 2px 2px 2px 0;
                     display: inline-block;
                 }
             }
