Fix table styling

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -155,6 +155,47 @@ aside {
     border-right: 3px solid $color_aside_border;
 }
 
+table {
+    border-collapse: collapse;
+    border: 1px solid $color_table_border;
+    width: 100%;
+    thead, tbody, tfoot, tr, th, td {
+        @include compact;
+    }
+    tr, th, td {
+        border: 1px solid $color_table_border;
+    }
+    thead {
+        background: $color_table_th_bg;
+    }
+    th {
+        @include set_font($font_table_heading, $font_size_table_heading, $color_text);
+        padding: 5px 6px;
+        white-space: nowrap;
+    }
+    td {
+        @include set_font($font_table_data, $font_size_table_data, $color_text);
+        line-height: $font_size_table_data;
+        padding: 1px 6px 1px 6px;
+        white-space: nowrap;
+        p {
+            margin: 0;
+            &.label {
+                line-height: 19px;
+                margin: 0;
+                white-space: nowrap !important;
+            }
+        }
+        a {
+            @include compact;
+        }
+        ul, ol {
+            list-style-type: square;
+            margin-bottom: 0px;
+        }
+    }
+}
+
 sup {
     font-size: $font_size_default - 2;
 
@@ -1107,49 +1148,9 @@ section.post_column_main {
         margin-bottom: 0;
     }
 
-    table {
-        border-collapse: collapse;
-        letter-spacing: 0px;
-        border: 1px solid $color_table_border;
-        
-        th {
-            @include set_font($font_table_heading, $font_size_table_heading, $color_text);
-            vertical-align: middle;
-            padding: 5px 6px;
-            background: $color_table_th_bg;
-            border: 1px solid $color_table_border;
-        }
-
-        td {
-            @include set_font($font_table_data, $font_size_table_data, $color_text);
-            vertical-align: middle;
-            padding: 1px 6px 1px 6px;
-            border: 1px solid $color_table_border;
-
-            p {
-                margin: 0;
-                &.label {
-                    line-height: 19px;
-                    margin: 0;
-                    white-space: nowrap !important;
-                }
-            }
-            a {
-                font-family: $font_table_data;
-                font-size: $font_size_table_data;
-                @include compact;
-            }
-
-            ul, ol {
-                list-style-type: square;
-                margin-bottom: 0px;
-            }
-        }
-
-        th:first-child,
-        td:first-child {
-            border-left: none;
-        }
+    table td a {
+        font-family: $font_table_data;
+        font-size: $font_size_table_data;
     }
 
     dl {
@@ -1323,10 +1324,11 @@ section.post_column_main {
         }
     }
 
-    table.tags,
-    tr td {
-        border: none;
-        padding: 0;
+    table.tags {
+        &, tr, td {
+            border: none;
+            padding: 0;
+        }
     }
     
     table.tags {
