--- a/_includes/social_media_links.html
+++ b/_includes/social_media_links.html
@@ -1,7 +1,7 @@
 <div id="social_media_links">
     <ul>
     {% for item in site.data.socmed %}
-        <li>
+        <li class="right">
             <a href="{{ item.link }}" target="{{ item.target }}" alt="{{ item.name }}"
                 data-toggle="tooltip" 
                 data-placement="top"
