--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -56,6 +56,7 @@ ul#nav_top {
             display: inline-block;
             padding: 14px 16px;
             border: none;
+            transition: background-color 0.2s ease;
             &:hover:not(.active) {
                 color: $color_button_hover_text;
                 background-color: $color_button_hover_bg;
