--- a/_includes/quotes.html
+++ b/_includes/quotes.html
@@ -17,15 +17,12 @@
                 while (counter < quote_count) {
                     var randomIndex = Math.floor(Math.random() * quote_total);
                     if (randomUsed.indexOf(randomIndex) == "-1") {
-                    
                         document.write("<div class='quote'>");
-                        document.write("<p><i class='fa fa-quote-left fa-lg' aria-hidden='true'></i>&nbsp;&nbsp;" + quote_text[randomIndex] + "</p>");
-                        document.write("<table>");
-                        document.write("<tr><td><p>&mdash;&nbsp;&nbsp;</p></td><td><p class='qauthor'>" + quote_from[randomIndex] + "</p><td/></tr>");
-                        document.write("<tr><td></td><td><p class='context'>" + quote_context[randomIndex] + "</p></td></tr></table>");
-                        document.write("</table>");
+                        document.write("<p class='qtext'><i class='fa fa-quote-left fa-lg' aria-hidden='true'></i>&nbsp;&nbsp;" + quote_text[randomIndex] + "</p>");
+                        document.write("<p class='qauthor'>&mdash;&nbsp;&nbsp;" + quote_from[randomIndex] + "</p>");
+                        document.write("<p class='context'>" + quote_context[randomIndex] + "</p>");
                         document.write("</div>");
-                        
+
                         // Store the new random number
                         randomUsed.push(randomIndex);
                         counter++;
